Bug 414133 - Task modules directory douplicated in Project Settings
Summary: Task modules directory douplicated in Project Settings
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-14 12:56 UTC by Dag Andersen
Modified: 2019-11-18 08:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2019-11-14 12:56:11 UTC
SUMMARY
Result is that taksmodules are loaded multiple times

STEPS TO REPRODUCE
1. Start plan multiple times and check Task Modules setting

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version:
Comment 1 Dag Andersen 2019-11-18 07:20:43 UTC
Git commit fd93f4a8eaff4e8dcdcbcb606439831ac985c9f6 by Dag Andersen.
Committed on 18/11/2019 at 07:20.
Pushed by danders into branch '3.2'.

Bug 414133 - Task modules directory duplicated in Project Settings

Clear taskmodules list if loading from xml and
guard against creating duplicated taskmodules urls as modules will be loaded multiple times.
FIXED-IN: 3.2.1

M  +15   -8    src/libs/kernel/kptproject.cpp
M  +1    -1    src/libs/kernel/kptproject.h
M  +12   -4    src/libs/ui/kptmainprojectpanel.cpp

https://commits.kde.org/calligraplan/fd93f4a8eaff4e8dcdcbcb606439831ac985c9f6
Comment 2 Dag Andersen 2019-11-18 08:17:50 UTC
Git commit af43ad00cbb120a36706f389b80976c9a4ac9af0 by Dag Andersen.
Committed on 18/11/2019 at 07:23.
Pushed by danders into branch 'master'.

Bug 414133 - Task modules directory duplicated in Project Settings

Clear taskmodules list if loading from xml and
guard against creating duplicated taskmodules urls as modules will be loaded multiple times.
FIXED-IN: 3.2.1

M  +15   -8    src/libs/kernel/kptproject.cpp
M  +1    -1    src/libs/kernel/kptproject.h
M  +12   -4    src/libs/ui/kptmainprojectpanel.cpp

https://commits.kde.org/calligraplan/af43ad00cbb120a36706f389b80976c9a4ac9af0