Bug 414133 - Task modules directory duplicated in Project Settings

Clear taskmodules list if loading from xml and
guard against creating duplicated taskmodules urls as modules will be loaded multiple times.

BUG: 414133
FIXED-IN: 3.2.1